...
        : setConfirmPass(Icons.hide);
    }
  };

  const renderScreenTabsHeaderView = () => {
    return (
      <View testID="loginScreen" style={[appStyle.row]}>
        <TouchableOpacity
          onPress={() => updateState(1)}
          style={[
            styles.tabStyle,
            {
              borderBottomColor: loginState
...
        innerRef={loginRef}
        validateOnBlur={false}
        validationSchema={signinValidationSchema}>
        {({handleChange, handleBlur, values, errors}) => (
          <View style={[appStyle.flex1, appStyle.pt20]}>
            <TextField
              testID={'loginEmailInput'}
              label={t('emailAdress')}
              fontSize={16}
              baseColor={ColorSet.grey}
              tintColor={ColorSet.red}
              onChangeText={handleChange('email')}
              onBlur={handleBlur('email')}
              value={values.email}
              error={errors.email}
              autoCapitalize="none"
              autoComplete="off"
            />
            <TextField
              testID={'passwordPasswordInput'}
              label={t('password')}
              fontSize={16}
              focused={false}
              baseColor={ColorSet.grey}
              tintColor={ColorSet.red}
              secureTextEntry={passSignup === Icons.hide ? true : false}
...
  };

  const renderBottomView = () => {
    return (
      <View style={styles.buttonStyle}>
        <Button
          testID="loginContinueButton"
          themeColor
          onPress={() => (loginState ? login() : signUpHandler())}>
          {loginState ? t('button_login') : t('button_createAccount')}
        </Button>
        <View style={[appStyle.aiCenter, appStyle.pb20]}>
          <Image style={[styles.logoDetail]} source={Images.logoDetailBlack} />
...
