...
                {color: activeState === 1 ? ColorSet.theme : ColorSet.grey},
              ]}>
              {t('local_common_TripPictures')}
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="photosTabPhotos"
            onPress={() => updateState(2)}
            style={[
              styles.tabStyle,
              {
                borderBottomColor:
                  activeState === 2 ? ColorSet.theme : ColorSet.grayLight,
...
          )}
        </View>
      </KeyboardAwareScrollView>
      {activeState === 2 && (
        <View style={appStyle.p20}>
          <Button
            testID="photosUploadPhotoButton"
            onPress={() => navigation.navigate(Screen.UploadNewPicture)}>
            {t('button_upload')}
          </Button>
        </View>
      )}
    </SafeAreaView>
...
